--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ main {
   padding: 20px;
   border: 4px solid #fff;
   border-radius: 12px;
-  margin: 40px auto 16px;
+  margin: 0 auto 16px;
   display: flex;
   justify-content: space-between;
 }
@@ -60,8 +60,14 @@ main {
 }
 
 .jack {
-  margin: 60px auto;
+  margin: 90px auto 60px;
   display: block;
   width: 280px;
   height: 180px;
+}
+
+audio {
+  position: fixed;
+  bottom: 4px;
+  left: 4px;
 }
